<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ddbb"
    tools:context=".activity.RegistrationActivity">

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:padding="20dp"
        android:translationZ="2dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/nunitoblack"
            android:gravity="center_horizontal"
            android:text="@string/kindly_hold_on_lets_have_a_cup_of_coffee"
            android:textColor="@color/white"
            android:textSize="38sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressdrawable"
            android:progress="0" />

        <ImageView
            android:id="@+id/imggif"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop"
            android:src="@raw/coffee" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitoblack"
            android:gravity="center_horizontal"
            android:text="@string/create_account"
            android:textColor="@color/primary1"
            android:textSize="30sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/profile"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <EditText
            android:id="@+id/etSUName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:autofillHints="name"
            android:background="@drawable/bg_edittext"
            android:elevation="6dp"
            android:fontFamily="@font/nunitoregular"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etSUEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:autofillHints="email"
            android:background="@drawable/bg_edittext"
            android:elevation="6dp"
            android:fontFamily="@font/nunitoregular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etSUPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_edittext"
            android:elevation="6dp"
            android:fontFamily="@font/nunitoregular"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etSUConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:elevation="6dp"
            android:fontFamily="@font/nunitoregular"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_edittext"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/nunitobold"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/nunitobold"
            android:gravity="center"
            android:text="@string/already_registered"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/signInLink"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/nunitobold"
            android:gravity="center"
            android:text="@string/signin"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>