<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ddbb"
    tools:context=".activity.HomeActivity">

    <RelativeLayout
        android:id="@+id/progressHLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:padding="20dp"
        android:translationZ="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/progressHBar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/nunitoblack"
            android:gravity="center_horizontal"
            android:text="@string/kindly_hold_on_lets_have_a_cup_of_coffee"
            android:textColor="@color/white"
            android:textSize="38sp" />

        <ProgressBar
            android:id="@+id/progressHBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressdrawable"
            android:progress="0" />

        <ImageView
            android:id="@+id/imgHgif"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/progressHBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop"
            android:src="@raw/coffee" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/toolbartitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/nunitoblack"
            android:gravity="center_vertical"
            android:text="@string/pinggg_chat"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/imgSettings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/logout"
            android:src="@drawable/ic_setting" />

        <ImageView
            android:id="@+id/imgLogOut"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/logout"
            android:src="@drawable/logout1"
            app:tint="@color/white" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recViewHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        tools:listitem="@layout/chat_item" />


</RelativeLayout>